--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="header">
 		<button id="mode-toggle">
-            <img id="mode-icon" src="/images/night-mode-purple.png">
+            <img id="mode-icon" src="/images/day-mode.png">
         </button>
 		<h2 id="title" class="title">Find Your Film</h2>
 		<h2 id="subtitle">
