--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="searchContainer">
 		<label for="search-input"></label>
 		<input type="text" id="search-input" name="search" placeholder="Search for a movie">
-		<button type="submit" id="search-button" class="search-button">Search</button>>
+		<button type="submit" id="search-button" class="search-button">Search</button>
 	</div>
 	<div id="resultsContainer" class="resultsContainer">
 		<div id="noResults">
